# final_kisaan

./: .gitattributes  .gitignore  README.md  build_knowledge_base.py  chunks.pkl  digital_pathologist.py  frontend.py  get_class_names.py  index.faiss  llm_processor.py  main.py  market_guru.py  orchestrator.py  policy_advisor.py  pyproject.toml  scraped_data.json  scraper.py  sky_watcher.py  train_model.py  update_knowledge_base.py
