[project]
name = "project-kisaan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.116.1",
    "google-cloud-speech>=2.33.0",
    "google-cloud-texttospeech>=2.27.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "speechrecognition>=3.14.3",
    "streamlit>=1.47.1",
    "streamlit-geolocation>=0.0.10",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.54.1",
    "uvicorn[standard]>=0.35.0",
]
